--- a/index.html
+++ b/index.html
@@ -67,6 +67,29 @@
 
         }
 
+        .submit {
+            color: white;
+            background-color: rgb(98, 50, 189);
+            /* float: right; */
+            height: 30px;
+            /* width: 100px; */
+            text-align: center;
+            border-radius: 3px;
+            font-size: 17px;
+            padding: 7px 5px 10px 5px;
+            text-align: center;
+            margin-left: 200px;
+            margin-top: 20px;
+        }
+
+        .submit:hover {
+            background-color: white;
+            color: rgb(98, 50, 189);
+            cursor: pointer;
+
+
+        }
+
         section {
             min-height: 750px;
             padding: 10px;
@@ -339,6 +362,22 @@
         }
 
          */
+        footer {
+            min-height: 350px;
+            background-color: rgb(236, 232, 227);
+            text-align: center;
+            line-height: 28px;
+            margin-top: 20px;
+            padding-top: 50px;
+        }
+
+        footer img {
+            width: 180px;
+        }
+
+        footer p {
+            font-size: 18px;
+        }
     </style>
 </head>
 
@@ -356,7 +395,7 @@
     <section id="presentation">
         <p>Salut, Je suis Amadou Diallo</p>
         <h1> <span>je cree des produits du design</span> <br> et de l'experience de marque</h1>
-        <p class="pousse"> Lorem ipsum sit amet
+        <p class="pousse"> Lorem ipsum dolor sit amet
             consectetur adipisicing elit. Culpa impedit mollitia, <br> modi dicta doloremque
 
             dolore debitis officiis magni ad delectus.</p>
@@ -589,10 +628,18 @@
                 <label>J'accepte les termes</label>
                 <input type="checkbox" placeholder="" type="text">
             </div>
-
+            <input class="submit" type="submit" value="envoyer">
         </form>
     </section>
-    <footer></footer>
+    <footer>
+        <img src="https://assets-global.website-files.com/62f375fa349867308a2e90dc/63030f03c32fa7cc10215a72_Logo.webp"
+            alt="">
+        <p>services</p>
+        <p>About me</p>
+        <p>portfolio</p>
+        <p>testimonials</p>
+        <p>portfolio</p>
+    </footer>
 </body>
 
 </html>
