--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
     <style>
         body {
             margin: 0;
@@ -392,27 +393,35 @@
 
     </nav>
 
-    <section id="presentation">
-        <p>Salut, Je suis Amadou Diallo</p>
-        <h1> <span>je cree des produits du design</span> <br> et de l'experience de marque</h1>
-        <p class="pousse"> Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Culpa impedit mollitia, <br> modi dicta doloremque
 
-            dolore debitis officiis magni ad delectus.</p>
-        <a href="#" class="button-2">Contactez moi</a>
-        <img src="https://assets-global.website-files.com/62f375fa349867308a2e90dc/63030ec6b0ee91d6920711d1_Header%20Image-p-1080.webp"
-            alt="">
+    <section id="presentation">
+        <div data-aos="zoom-in">
+            <p>Salut, Je suis Amadou Diallo</p>
+            <h1> <span>je cree des produits du design</span> <br> et de l'experience de marque</h1>
+            <p class="pousse"> Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Culpa impedit mollitia, <br> modi dicta doloremque
+
+                dolore debitis officiis magni ad delectus.</p>
+            <a href="#" class="button-2">Contactez moi</a>
+
+            <img src="https://assets-global.website-files.com/62f375fa349867308a2e90dc/63030ec6b0ee91d6920711d1_Header%20Image-p-1080.webp"
+                alt="">
+        </div>
+
     </section>
     <section id="skills">
-        <p>Mes compétences</p>
-        <h2 class="expertise">Mon expertise</h2>
-        <div class="skill-item">
-            <img src="https://assets-global.website-files.com/62f375fa349867308a2e90dc/63030ef9fa748227f3a97612_product-chain%201.webp"
-                alt="">
-            <h2>Branding & Logo</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error nam quaerat similique eaque quis
-                perferendis ab facere ratione quo, facilis vitae ducimus eius dolor incidunt ullam accusantium
-                blanditiis veritatis et!</p>
+        <div data-aos="zoom-in">
+            <p>Mes compétences</p>
+            <h2 class="expertise">Mon expertise</h2>
+            <div class="skill-item">
+                <img src="https://assets-global.website-files.com/62f375fa349867308a2e90dc/63030ef9fa748227f3a97612_product-chain%201.webp"
+                    alt="">
+                <h2>Branding & Logo</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error nam quaerat similique eaque quis
+                    perferendis ab facere ratione quo, facilis vitae ducimus eius dolor incidunt ullam accusantium
+                    blanditiis veritatis et!</p>
+            </div>
+        </div>
         </div>
         <div class="skill-item">
             <img src="https://assets-global.website-files.com/62f375fa349867308a2e90dc/63030ef9dac694ad05cefefa_tag%201.webp"
@@ -441,44 +450,48 @@
 
     </section>
     <section id="aboutme">
-
-        <img src="https://assets-global.website-files.com/62f375fa349867308a2e90dc/63070b693f1e5efe3cd77c9e_About%20Me-p-1080.png"
-            alt="">
-        <p>A propos</p>
-        <h2>A propos de moi</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, ea! Molestias impedit dolores non. Eaque sed,
-            veniam ut quo harum molestiae ad repellat eius voluptates. Provident temporibus maxime ipsam asperiores!</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium corrupti veniam qui, ex quaerat ab
-            repudiandae accusamus. Sunt provident hic eum </p>
+        <div data-aos="fade-down-left">
+            <img src="https://assets-global.website-files.com/62f375fa349867308a2e90dc/63070b693f1e5efe3cd77c9e_About%20Me-p-1080.png"
+                alt="">
+            <p>A propos</p>
+            <h2>A propos de moi</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, ea! Molestias impedit dolores non. Eaque
+                sed,
+                veniam ut quo harum molestiae ad repellat eius voluptates. Provident temporibus maxime ipsam asperiores!
+            </p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium corrupti veniam qui, ex quaerat ab
+                repudiandae accusamus. Sunt provident hic eum </p>
+        </div>
     </section>
     <section id="myportfolio">
-        <p>
-            projets recent
-        </p>
-        <div class="display">
-            <h2>
-                Mon Portfolio
-            </h2>
-            <a href="https://www.youtube.com/?app=desktop&hl=fr&gl=MA" target="_blank" class="button-3">Visit My
-                Dribbble </a>
-        </div>
-        <div class="Portfolio-item">
-            <img src="https://assets-global.website-files.com/630345fdf55aa7a68d06e94e/63034d85aa9085069346fe89_Image.png"
-                alt="">
-            <h2>
-                Ahuse
-            </h2>
+        <div data-aos="flip-down">
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br> Suspendisse varius enim in eros.
+                projets recent
             </p>
-            <a href="">
-                voir dans dribbble <img
-                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQFWwWdpVDYUqrizLYNN2iftaIJo_NcNu17xQ&s"
+            <div class="display">
+                <h2>
+                    Mon Portfolio
+                </h2>
+                <a href="https://www.youtube.com/?app=desktop&hl=fr&gl=MA" target="_blank" class="button-3">Visit My
+                    Dribbble </a>
+            </div>
+            <div class="Portfolio-item">
+                <img src="https://assets-global.website-files.com/630345fdf55aa7a68d06e94e/63034d85aa9085069346fe89_Image.png"
                     alt="">
-            </a>
+                <h2>
+                    Ahuse
+                </h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br> Suspendisse varius enim in eros.
+                </p>
+                <a href="">
+                    voir dans dribbble <img
+                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQFWwWdpVDYUqrizLYNN2iftaIJo_NcNu17xQ&s"
+                        alt="">
+                </a>
 
 
-
+            </div>
 
 
         </div>
@@ -526,110 +539,114 @@
 
     </section>
     <section id="testimonials">
-        <p>Retour Clients</p>
-        <h2>Témoignages clients</h2>
-        <div class="temoin-item">
-            <img class="stars"
-                src="https://assets-global.website-files.com/62f375fa349867308a2e90dc/63030f0ab0d76c7a3b435330_Stars.png"
-                alt="">
-            <p class="description">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus itaque
-                officiis totam iusto reprehenderit fugit possimus odio ducimus! Sed error quae dolores adipisci
-                quibusdam nisi eveniet neque necessitatibus libero est!"</p>
-
-            <div class="person-div">
-                <img src="https://assets-global.website-files.com/62f375fa349867308a2e90dc/63030f0a42cbe2bf46efca08_Avatar%20Image.webp"
+        <div data-aos="zoom-in-up">
+            <p>Retour Clients</p>
+            <h2>Témoignages clients</h2>
+            <div class="temoin-item">
+                <img class="stars"
+                    src="https://assets-global.website-files.com/62f375fa349867308a2e90dc/63030f0ab0d76c7a3b435330_Stars.png"
                     alt="">
-                <div>
-                    <p class="person-name">Richard Bathiebo</p>
-                    <p>MoussaTech</p>
+                <p class="description">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus itaque
+                    officiis totam iusto reprehenderit fugit possimus odio ducimus! Sed error quae dolores adipisci
+                    quibusdam nisi eveniet neque necessitatibus libero est!"</p>
+
+                <div class="person-div">
+                    <img src="https://assets-global.website-files.com/62f375fa349867308a2e90dc/63030f0a42cbe2bf46efca08_Avatar%20Image.webp"
+                        alt="">
+                    <div>
+                        <p class="person-name">Richard Bathiebo</p>
+                        <p>MoussaTech</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="temoin-item">
-            <img class="stars"
-                src="https://assets-global.website-files.com/62f375fa349867308a2e90dc/63030f0ab0d76c7a3b435330_Stars.png"
-                alt="">
-            <p class="description">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus itaque
-                officiis totam iusto reprehenderit fugit possimus odio ducimus! Sed error quae dolores adipisci
-                quibusdam nisi eveniet neque necessitatibus libero est!"</p>
-
-            <div class="person-div">
-                <img src="https://assets-global.website-files.com/62f375fa349867308a2e90dc/63030f0a2ea56e4e8a33fc6b_Avatar%20Image-1.webp"
+            <div class="temoin-item">
+                <img class="stars"
+                    src="https://assets-global.website-files.com/62f375fa349867308a2e90dc/63030f0ab0d76c7a3b435330_Stars.png"
                     alt="">
-                <div>
-                    <p class="person-name">Richard Bathiebo</p>
-                    <p>MoussaTech</p>
+                <p class="description">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus itaque
+                    officiis totam iusto reprehenderit fugit possimus odio ducimus! Sed error quae dolores adipisci
+                    quibusdam nisi eveniet neque necessitatibus libero est!"</p>
+
+                <div class="person-div">
+                    <img src="https://assets-global.website-files.com/62f375fa349867308a2e90dc/63030f0a2ea56e4e8a33fc6b_Avatar%20Image-1.webp"
+                        alt="">
+                    <div>
+                        <p class="person-name">Richard Bathiebo</p>
+                        <p>MoussaTech</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="temoin-item">
-            <img class="stars"
-                src="https://assets-global.website-files.com/62f375fa349867308a2e90dc/63030f0ab0d76c7a3b435330_Stars.png"
-                alt="">
-            <p class="description">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus itaque
-                officiis totam iusto reprehenderit fugit possimus odio ducimus! Sed error quae dolores adipisci
-                quibusdam nisi eveniet neque necessitatibus libero est!"</p>
-
-            <div class="person-div">
-                <img src="https://assets-global.website-files.com/62f375fa349867308a2e90dc/63030f0aa0f28475f0dcd479_Avatar%20Image-2.webp"
+            <div class="temoin-item">
+                <img class="stars"
+                    src="https://assets-global.website-files.com/62f375fa349867308a2e90dc/63030f0ab0d76c7a3b435330_Stars.png"
                     alt="">
-                <div>
-                    <p class="person-name">Richard Bathiebo</p>
-                    <p>MoussaTech</p>
+                <p class="description">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus itaque
+                    officiis totam iusto reprehenderit fugit possimus odio ducimus! Sed error quae dolores adipisci
+                    quibusdam nisi eveniet neque necessitatibus libero est!"</p>
+
+                <div class="person-div">
+                    <img src="https://assets-global.website-files.com/62f375fa349867308a2e90dc/63030f0aa0f28475f0dcd479_Avatar%20Image-2.webp"
+                        alt="">
+                    <div>
+                        <p class="person-name">Richard Bathiebo</p>
+                        <p>MoussaTech</p>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
     <section id="contact">
-        <p>Prendre contact</p>
-        <h2>Contactez-moi</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        <div data-aos="zoom-in-up">
 
-        </p>
+            <p>Prendre contact</p>
+            <h2>Contactez-moi</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 
-        <form action="">
-            <div class="input-div">
-                <label>Prénom</label>
-                <input placeholder="" type="text">
-            </div>
-            <div class="input-div">
-                <label>Nom</label>
-                <input placeholder="" type="text">
-            </div>
-            <div class="input-div">
-                <label>Email</label>
-                <input placeholder="" type="text">
-            </div>
-            <div class="input-div">
-                <label>Numéro de téléphone</label>
-                <input placeholder="" type="text">
-            </div>
-            <div class="input-div">
-                <label>Choisir un sujet</label>
-                <select name="pets" id="pet-select">
-                    <option value="">--Sélectionner--</option>
-                    <option value="spider">Site web</option>
-                    <option value="goldfish">Application mobile</option>
-                    <option value="goldfish">Design UI</option>
-                    <option value="goldfish">Flyers/Affiche</option>
-                </select>
-                <!-- <input placeholder="" type="text"> -->
-            </div>
-            <div class="input-div">
-                <label>Message</label>
-                <!-- <textarea  rows="2" cols="2">
+            </p>
+
+            <form action="">
+                <div class="input-div">
+                    <label>Prénom</label>
+                    <input placeholder="" type="text">
+                </div>
+                <div class="input-div">
+                    <label>Nom</label>
+                    <input placeholder="" type="text">
+                </div>
+                <div class="input-div">
+                    <label>Email</label>
+                    <input placeholder="" type="text">
+                </div>
+                <div class="input-div">
+                    <label>Numéro de téléphone</label>
+                    <input placeholder="" type="text">
+                </div>
+                <div class="input-div">
+                    <label>Choisir un sujet</label>
+                    <select name="pets" id="pet-select">
+                        <option value="">--Sélectionner--</option>
+                        <option value="spider">Site web</option>
+                        <option value="goldfish">Application mobile</option>
+                        <option value="goldfish">Design UI</option>
+                        <option value="goldfish">Flyers/Affiche</option>
+                    </select>
+                    <!-- <input placeholder="" type="text"> -->
+                </div>
+                <div class="input-div">
+                    <label>Message</label>
+                    <!-- <textarea  rows="2" cols="2">
                 Entrez votre message
                 </textarea> -->
-                <textarea name="textarea" rows="10" cols="50">Entrez votre message</textarea>
+                    <textarea name="textarea" rows="10" cols="50">Entrez votre message</textarea>
 
-            </div>
+                </div>
 
-            <div class="">
-                <label>J'accepte les termes</label>
-                <input type="checkbox" placeholder="" type="text">
-            </div>
-            <input class="submit" type="submit" value="envoyer">
-        </form>
+                <div class="">
+                    <label>J'accepte les termes</label>
+                    <input type="checkbox" placeholder="" type="text">
+                </div>
+                <input class="submit" type="submit" value="envoyer">
+            </form>
     </section>
     <footer>
         <img src="https://assets-global.website-files.com/62f375fa349867308a2e90dc/63030f03c32fa7cc10215a72_Logo.webp"
@@ -639,7 +656,12 @@
         <p>portfolio</p>
         <p>testimonials</p>
         <p>portfolio</p>
+        </div>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script>
+        AOS.init(); 
+    </script>
 </body>
 
 </html>
