--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         #presentation img {
             width: 300px;
             margin-top: 50px;
-            margin-left: 50px;
+            margin-left: 10px;
         }
 
         #skills {
@@ -395,7 +395,7 @@
 
 
     <section id="presentation">
-        <div data-aos="zoom-in">
+        <div data-aos="fade-up" data-aos-duration="3000">
             <p>Salut, Je suis Amadou Diallo</p>
             <h1> <span>je cree des produits du design</span> <br> et de l'experience de marque</h1>
             <p class="pousse"> Lorem ipsum dolor sit amet
@@ -410,7 +410,7 @@
 
     </section>
     <section id="skills">
-        <div data-aos="zoom-in">
+        <div data-aos="fade-up" data-aos-duration="3000">
             <p>Mes compétences</p>
             <h2 class="expertise">Mon expertise</h2>
             <div class="skill-item">
@@ -450,7 +450,7 @@
 
     </section>
     <section id="aboutme">
-        <div data-aos="fade-down-left">
+        <div data-aos="flip-down">
             <img src="https://assets-global.website-files.com/62f375fa349867308a2e90dc/63070b693f1e5efe3cd77c9e_About%20Me-p-1080.png"
                 alt="">
             <p>A propos</p>
