--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
         body {
             margin: 0;
-            overflow: hidden;
+            /* overflow: hidden; */
 
         }
 
@@ -100,6 +100,7 @@
 
         #presentation {
             background-color: rgb(241, 240, 247);
+            overflow: hidden;
         }
 
         #presentation .pousse {
@@ -126,6 +127,7 @@
 
         #skills {
             /* background-color: yellow; */
+            overflow: hidden;
         }
 
         .skill-item {
@@ -174,7 +176,7 @@
 
         #aboutme {
             background-color: rgb(236, 235, 238);
-
+            overflow: hidden;
         }
 
         #aboutme h2 {
@@ -190,6 +192,7 @@
             width: 320px;
             margin-top: 17px;
             margin-left: 80px;
+            overflow: hidden;
         }
 
         #myportfolio {
@@ -197,6 +200,7 @@
             padding-left: 15px;
             padding-right: 15px;
             background-color: rgb(247, 244, 246);
+            overflow: hidden;
         }
 
         #myportfolio h2 {
@@ -451,7 +455,7 @@
 
     </section>
     <section id="aboutme">
-        <div data-aos="flip-down">
+        <div data-aos="zoom-in-up">
             <img src="https://assets-global.website-files.com/62f375fa349867308a2e90dc/63070b693f1e5efe3cd77c9e_About%20Me-p-1080.png"
                 alt="">
             <p>A propos</p>
