--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
         #skills {
             /* background-color: yellow; */
-            overflow: hidden;
+            /* overflow: hidden; */
         }
 
         .skill-item {
@@ -176,7 +176,7 @@
 
         #aboutme {
             background-color: rgb(236, 235, 238);
-            overflow: hidden;
+            /* overflow: hidden; */
         }
 
         #aboutme h2 {
@@ -192,7 +192,7 @@
             width: 320px;
             margin-top: 17px;
             margin-left: 80px;
-            overflow: hidden;
+            /* overflow: hidden; */
         }
 
         #myportfolio {
@@ -200,7 +200,7 @@
             padding-left: 15px;
             padding-right: 15px;
             background-color: rgb(247, 244, 246);
-            overflow: hidden;
+            /* overflow: hidden; */
         }
 
         #myportfolio h2 {
